fix z-index drama

--- a/src/scss/dashboard/dashboard.scss
+++ b/src/scss/dashboard/dashboard.scss
@@ -311,6 +311,7 @@
   justify-content: center;
   display: flex;
   opacity: 0;
+  z-index: 2;
   visibility: hidden;
   transition:
     opacity 0.6s,
