--- a/src/scss/ui-kit/ui_kit_navigation.scss
+++ b/src/scss/ui-kit/ui_kit_navigation.scss
@@ -67,6 +67,7 @@
   top: 0;
   left: 0;
   height: 72px;
+  z-index: 1;
   width: calc(100% - 40px - 132px);
   margin-left: 132px;
   box-sizing: border-box;
